--- a/modeling_data.ipynb
+++ b/modeling_data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "      <td>NaT</td>\n",
        "      <td>9:53:00</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -499,7 +499,7 @@
        "      <td>NaT</td>\n",
        "      <td>9:50:00</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -511,7 +511,7 @@
        "      <td>NaT</td>\n",
        "      <td>9:22:00</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -523,7 +523,7 @@
        "      <td>NaT</td>\n",
        "      <td>9:22:00</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -535,7 +535,7 @@
        "      <td>NaT</td>\n",
        "      <td>8:41:00</td>\n",
        "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -559,7 +559,7 @@
        "      <td>0 days 17:03:00</td>\n",
        "      <td>10:05:00</td>\n",
        "      <td>17:03:00</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>5.0 Minute</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>317</th>\n",
@@ -571,7 +571,7 @@
        "      <td>0 days 17:02:00</td>\n",
        "      <td>10:01:00</td>\n",
        "      <td>17:02:00</td>\n",
-       "      <td>60.0</td>\n",
+       "      <td>1.0 Minute</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>318</th>\n",
@@ -583,7 +583,7 @@
        "      <td>0 days 17:02:00</td>\n",
        "      <td>9:56:00</td>\n",
        "      <td>17:02:00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>319</th>\n",
@@ -595,7 +595,7 @@
        "      <td>0 days 17:05:00</td>\n",
        "      <td>9:59:00</td>\n",
        "      <td>17:05:00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>320</th>\n",
@@ -607,7 +607,7 @@
        "      <td>0 days 17:01:00</td>\n",
        "      <td>9:53:00</td>\n",
        "      <td>17:01:00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -629,28 +629,31 @@
        "320  321  2022-07-01              16  Present 0 days 09:53:00 0 days 17:01:00   \n",
        "\n",
        "    firstcheckinstr lastcheckoutstr  total_late  \n",
-       "0           9:53:00            None         0.0  \n",
-       "1           9:50:00            None         0.0  \n",
-       "2           9:22:00            None         0.0  \n",
-       "3           9:22:00            None         0.0  \n",
-       "4           8:41:00            None         0.0  \n",
+       "0           9:53:00            None           0  \n",
+       "1           9:50:00            None           0  \n",
+       "2           9:22:00            None           0  \n",
+       "3           9:22:00            None           0  \n",
+       "4           8:41:00            None           0  \n",
        "..              ...             ...         ...  \n",
-       "316        10:05:00        17:03:00       300.0  \n",
-       "317        10:01:00        17:02:00        60.0  \n",
-       "318         9:56:00        17:02:00         0.0  \n",
-       "319         9:59:00        17:05:00         0.0  \n",
-       "320         9:53:00        17:01:00         0.0  \n",
+       "316        10:05:00        17:03:00  5.0 Minute  \n",
+       "317        10:01:00        17:02:00  1.0 Minute  \n",
+       "318         9:56:00        17:02:00           0  \n",
+       "319         9:59:00        17:05:00           0  \n",
+       "320         9:53:00        17:01:00           0  \n",
        "\n",
        "[321 rows x 9 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from math import floor\n",
+    "from datetime import date\n",
+    "\n",
+    "\n",
     "def format_timedelta(td):\n",
     "    if pd.isnull(td) :\n",
     "        return None\n",
@@ -666,7 +669,7 @@
     "    else :\n",
     "        return 0\n",
     "\n",
-    "def load_presensi(conn):\n",
+    "def load_presensi(conn, month='January', year=date.today().year):\n",
     "    cursor = conn.cursor()\n",
     "    query = \"SELECT * FROM presensi_table\"\n",
     "    cursor.execute(query)\n",
@@ -683,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +940,7 @@
        "8     NaN        NaN  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,12 +951,180 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>participant_id</th>\n",
+       "      <th>leave_kind</th>\n",
+       "      <th>from</th>\n",
+       "      <th>to</th>\n",
+       "      <th>reason</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17</td>\n",
+       "      <td>ANNUAL</td>\n",
+       "      <td>2022-07-29</td>\n",
+       "      <td>2022-07-29</td>\n",
+       "      <td>Acara keluarga</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19</td>\n",
+       "      <td>ANNUAL</td>\n",
+       "      <td>2022-07-25</td>\n",
+       "      <td>2022-07-26</td>\n",
+       "      <td>Ada urusan keluarga</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>ANNUAL</td>\n",
+       "      <td>2022-07-15</td>\n",
+       "      <td>2022-07-15</td>\n",
+       "      <td>Antar ibu ke poli Mata Katarak</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>ANNUAL</td>\n",
+       "      <td>2022-07-15</td>\n",
+       "      <td>2022-07-15</td>\n",
+       "      <td>Sakit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>ANNUAL</td>\n",
+       "      <td>2022-07-15</td>\n",
+       "      <td>2022-07-18</td>\n",
+       "      <td>Ada keperluan keluarga</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Bereavement</td>\n",
+       "      <td>2022-07-11</td>\n",
+       "      <td>2022-07-11</td>\n",
+       "      <td>Keluarga</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>13</td>\n",
+       "      <td>ANNUAL</td>\n",
+       "      <td>2022-07-08</td>\n",
+       "      <td>2022-07-08</td>\n",
+       "      <td>Pulang kampung idul adha</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>ANNUAL</td>\n",
+       "      <td>2022-07-07</td>\n",
+       "      <td>2022-07-07</td>\n",
+       "      <td>Ada urusan keluarga</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>14</td>\n",
+       "      <td>ANNUAL</td>\n",
+       "      <td>2022-06-27</td>\n",
+       "      <td>2022-07-05</td>\n",
+       "      <td>Family visit Canada</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   participant_id   leave_kind        from          to  \\\n",
+       "0              17       ANNUAL  2022-07-29  2022-07-29   \n",
+       "1              19       ANNUAL  2022-07-25  2022-07-26   \n",
+       "2               8       ANNUAL  2022-07-15  2022-07-15   \n",
+       "3              10       ANNUAL  2022-07-15  2022-07-15   \n",
+       "4               6       ANNUAL  2022-07-15  2022-07-18   \n",
+       "5               0  Bereavement  2022-07-11  2022-07-11   \n",
+       "6              13       ANNUAL  2022-07-08  2022-07-08   \n",
+       "7               2       ANNUAL  2022-07-07  2022-07-07   \n",
+       "8              14       ANNUAL  2022-06-27  2022-07-05   \n",
+       "\n",
+       "                           reason  \n",
+       "0                  Acara keluarga  \n",
+       "1             Ada urusan keluarga  \n",
+       "2  Antar ibu ke poli Mata Katarak  \n",
+       "3                           Sakit  \n",
+       "4          Ada keperluan keluarga  \n",
+       "5                        Keluarga  \n",
+       "6        Pulang kampung idul adha  \n",
+       "7             Ada urusan keluarga  \n",
+       "8             Family visit Canada  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    df_leave_tb = df_leave_tb.drop(columns=['id_leave'])\n",
+    "    df_leave_tb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9  rows inserted.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor = connection.cursor()\n",
+    "\n",
+    "leave_values = []\n",
+    "for ind, val in df_leave_tb.iterrows():\n",
+    "    leave_values.append(tuple(val.values))\n",
+    "sql = \"INSERT INTO leave_table (participant_id, leave_kind, leave_from, leave_to, reason) VALUES(%s, %s, %s, %s, %s)\"\n",
+    "cursor.executemany(sql, leave_values)\n",
+    "connection.commit()\n",
+    "\n",
+    "print(cursor.rowcount, \" rows inserted.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
