Reading dashboard data half complete

--- a/modeling_data.ipynb
+++ b/modeling_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,24 @@
     "import numpy as np\n",
     "import mysql.connector as sqlconnector"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1881,9 +1899,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_presensi['']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-07-26\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -2562,7 +2596,7 @@
        "[22 rows x 35 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2582,7 +2616,8 @@
     "    dict_absen['presensi_total'] = []\n",
     "    dict_absen['absensi_total'] = []\n",
     "    dict_absen['cuti_total'] = []\n",
-    "\n",
+    "    \n",
+    "    print(max(df_presensi['Date'].values))\n",
     "    # dict_absen\n",
     "    for ind,val in df_participant.iterrows() :\n",
     "        dict_absen['Name'].append(val['Name'])\n",
@@ -2609,6 +2644,274 @@
     "\n",
     "df_absen = load_monthly_table_data(df_participant, df_presensi, month=7, year=2022)\n",
     "df_absen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_yearly_data(df_presensi_participant, year=2022) :\n",
+    "    monthdict = { 'January' : 1 ,\n",
+    "                  'February' : 2,\n",
+    "                  'March' : 3,\n",
+    "                  'April' : 4,\n",
+    "                  'May' : 5,\n",
+    "                  'June' : 6,\n",
+    "                  'July' : 7,\n",
+    "                  'August' : 8,\n",
+    "                  'September' : 9,\n",
+    "                  'October' : 10,\n",
+    "                  'November' : 11,\n",
+    "                  'December' : 12}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "17\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "17\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'monthly': {'1': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 21,\n",
+       "   'nodata_pct': 100},\n",
+       "  '2': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 20,\n",
+       "   'nodata_pct': 100},\n",
+       "  '3': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 23,\n",
+       "   'nodata_pct': 100},\n",
+       "  '4': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 21,\n",
+       "   'nodata_pct': 100},\n",
+       "  '5': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 22,\n",
+       "   'nodata_pct': 100},\n",
+       "  '6': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 22,\n",
+       "   'nodata_pct': 100},\n",
+       "  '7': {'total_present': 17,\n",
+       "   'present_pct': 81,\n",
+       "   'total_absent': 1,\n",
+       "   'absent_pct': 5,\n",
+       "   'nodata': 3,\n",
+       "   'nodata_pct': 14},\n",
+       "  '8': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 23,\n",
+       "   'nodata_pct': 100},\n",
+       "  '9': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 22,\n",
+       "   'nodata_pct': 100},\n",
+       "  '10': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 21,\n",
+       "   'nodata_pct': 100},\n",
+       "  '11': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 22,\n",
+       "   'nodata_pct': 100},\n",
+       "  '12': {'total_present': 0,\n",
+       "   'present_pct': 0,\n",
+       "   'total_absent': 0,\n",
+       "   'absent_pct': 0,\n",
+       "   'nodata': 22,\n",
+       "   'nodata_pct': 100}}}"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def load_yearly(df_presensi, participant_id=0, year=2022) :\n",
+    "    days = []\n",
+    "    for i in range(12) :\n",
+    "        days.append([datetime.date(year, i+1, d+1) for d in range(calendar.monthrange(year,i+1)[1])])\n",
+    "\n",
+    "    # weekdays = ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']\n",
+    "    dict_analysis = {}\n",
+    "\n",
+    "    monthdict = { 'January' : 1 ,\n",
+    "                  'February' : 2,\n",
+    "                  'March' : 3,\n",
+    "                  'April' : 4,\n",
+    "                  'May' : 5,\n",
+    "                  'June' : 6,\n",
+    "                  'July' : 7,\n",
+    "                  'August' : 8,\n",
+    "                  'September' : 9,\n",
+    "                  'October' : 10,\n",
+    "                  'November' : 11,\n",
+    "                  'December' : 12}\n",
+    "    \n",
+    "    allmonth = {}\n",
+    "    for imonth in range(12) :\n",
+    "        monthly_ = {}\n",
+    "        if imonth == 11 :\n",
+    "            presentlist = df_presensi[  (df_presensi['Participant_id'] == participant_id) & \n",
+    "                                    (df_presensi['datetimedate'] >= datetime.date(year,imonth+1,1)) & \n",
+    "                                    (df_presensi['datetimedate'] <= datetime.date(year,imonth+1,31))]\n",
+    "        else :\n",
+    "            presentlist = df_presensi[  (df_presensi['Participant_id'] == participant_id) & \n",
+    "                                    (df_presensi['datetimedate'] >= datetime.date(year,imonth+1,1)) & \n",
+    "                                    (df_presensi['datetimedate'] < datetime.date(year,imonth+2,1))]\n",
+    "         \n",
+    "        print(len(presentlist))\n",
+    "        daysindata = presentlist['datetimedate'].values\n",
+    "        presentotal = 0\n",
+    "        absentotal = 0\n",
+    "        nodata = 0\n",
+    "        if len(presentlist['datetimedate'].values) > 0 :\n",
+    "            mindate = min(presentlist['datetimedate'].values)\n",
+    "            maxdate = max(presentlist['datetimedate'].values)\n",
+    "            for day in days[imonth]:\n",
+    "                if day.weekday() == 5 or day.weekday() == 6 :\n",
+    "                    pass\n",
+    "            \n",
+    "                elif day < mindate or day > maxdate :\n",
+    "                    nodata += 1\n",
+    "\n",
+    "                elif day in daysindata :\n",
+    "                    # dict_absen[day].append('P')\n",
+    "                    presentotal += 1\n",
+    "\n",
+    "                else :\n",
+    "                    # dict_absen[day].append('A')\n",
+    "                    absentotal += 1\n",
+    "        else :\n",
+    "            for day in days[imonth]:\n",
+    "                if day.weekday() == 5 or day.weekday() == 6 :\n",
+    "                    pass\n",
+    "            \n",
+    "                else :\n",
+    "                    nodata += 1\n",
+    "        totaldata = presentotal + absentotal + nodata\n",
+    "        monthly_['total_present'] = presentotal\n",
+    "        monthly_['present_pct'] = round((presentotal/totaldata)*100)\n",
+    "        monthly_['total_absent'] = absentotal\n",
+    "        monthly_['absent_pct'] = round((absentotal/totaldata)*100)\n",
+    "        monthly_['nodata'] = nodata\n",
+    "        monthly_['nodata_pct'] = round((nodata/totaldata)*100)\n",
+    "        allmonth[str(imonth+1)] = monthly_\n",
+    "    dict_analysis['monthly'] = allmonth\n",
+    "    \n",
+    "    totalpresent = 0\n",
+    "    totalabsent = 0\n",
+    "    totalnodata = 0\n",
+    "    for i in range(12) :\n",
+    "        totalpresent += dict_analysis['monthly'][str(i+1)]['total_present']\n",
+    "        totalabsent += dict_analysis['monthly'][str(i+1)]['total_absent']\n",
+    "        totalnodata += dict_analysis['monthly'][str(i+1)]['nodata']\n",
+    "    \n",
+    "    totaldata = totalabsent + totalpresent + totalnodata\n",
+    "    dict_analysis['yearly'] = { 'total_present': totalpresent,\n",
+    "                                'total_absent': totalabsent,\n",
+    "                                'total_nodata': totalnodata,\n",
+    "                                'presentpct': round((totalpresent/totaldata)*100),\n",
+    "                                'absentpct': round((totalabsent/totaldata)*100),\n",
+    "                                'nodatapct': round((totalnodata/totaldata)*100)\n",
+    "                            }\n",
+    "    # print(totalpresent)\n",
+    "    # for y in range(12) :\n",
+    "    #     monthly_ = {}\n",
+    "    #     monthly_['total_present'] = \n",
+    "    # dates = 0\n",
+    "    # for day in days :\n",
+    "    #     wkday = weekdays[day.weekday()]\n",
+    "    #     dict_absen[day] = []\n",
+    "    #     dates += 1\n",
+    "    \n",
+    "    # print(max(df_presensi['Date'].values))\n",
+    "    # # dict_absen\n",
+    "    \n",
+    "    #     dict_absen['presensi_total'].append(presentotal)\n",
+    "    #     dict_absen['absensi_total'].append(absentotal)\n",
+    "    #     dict_absen['cuti_total'].append(0)\n",
+    "\n",
+    "    return dict_analysis\n",
+    "\n",
+    "result = load_yearly(df_presensi, participant_id=0)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2022, 7, 26)"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(df_presensi['datetimedate'].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_presensi"
    ]
   },
   {
