--- a/modeling_data.ipynb
+++ b/modeling_data.ipynb
@@ -2669,7 +2669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -2682,13 +2682,12 @@
       "0\n",
       "0\n",
       "0\n",
-      "17\n",
+      "11\n",
       "0\n",
       "0\n",
       "0\n",
       "0\n",
-      "0\n",
-      "17\n"
+      "0\n"
      ]
     },
     {
@@ -2730,12 +2729,12 @@
        "   'absent_pct': 0,\n",
        "   'nodata': 22,\n",
        "   'nodata_pct': 100},\n",
-       "  '7': {'total_present': 17,\n",
-       "   'present_pct': 81,\n",
+       "  '7': {'total_present': 11,\n",
+       "   'present_pct': 52,\n",
        "   'total_absent': 1,\n",
        "   'absent_pct': 5,\n",
-       "   'nodata': 3,\n",
-       "   'nodata_pct': 14},\n",
+       "   'nodata': 9,\n",
+       "   'nodata_pct': 43},\n",
        "  '8': {'total_present': 0,\n",
        "   'present_pct': 0,\n",
        "   'total_absent': 0,\n",
@@ -2765,10 +2764,16 @@
        "   'total_absent': 0,\n",
        "   'absent_pct': 0,\n",
        "   'nodata': 22,\n",
-       "   'nodata_pct': 100}}}"
+       "   'nodata_pct': 100}},\n",
+       " 'yearly': {'total_present': 11,\n",
+       "  'total_absent': 1,\n",
+       "  'total_nodata': 248,\n",
+       "  'presentpct': 4,\n",
+       "  'absentpct': 0,\n",
+       "  'nodatapct': 95}}"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2881,8 +2886,66 @@
     "\n",
     "    return dict_analysis\n",
     "\n",
-    "result = load_yearly(df_presensi, participant_id=0)\n",
+    "result = load_yearly(df_presensi, participant_id=14)\n",
     "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_p</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>dep_id</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Chris Ariwibowo</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_p             Name  dep_id email\n",
+       "0     0  Chris Ariwibowo       0  None"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_participant[df_participant['id_p'] == 0]"
    ]
   },
   {
